# httpx_api_project

./: .pylintrc  pyproject.toml
src/: settings.py
src/client/: consumer_api.py
src/infra/: consumer_api.py
tests/: test_consumer_api.py
