[tool.poetry]
name = "httpx_api_project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.20.0"
pylint = "^2.11.1"
black = "^21.9b0"
pre-commit = "^2.15.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
